# pimacs

./: .gitignore  .pre-commit-config.yaml  .projectile  CMakeLists.txt  README.md  README.org  mypy.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
cmake/: core.cmake
docs/: design.org
docs/design/: aot.md  data structure.md  lisp dialect.md
pimacs/: __init__.py  logger.py
pimacs/ast/: README.md  ast.py  ast_printer.py  ast_visitor.py  grammar.g  parser.py  type.py  type2.py  utils.py
pimacs/builtin/: README.md  any.pim  buffer.pis  core.pis  dict.pim  list.pim  list.pis  org-element.pis
pimacs/codegen/: README.md  codegen.py  phases.py
pimacs/lang/: context.py  grammar.g  grammar.py  ir.py  ir_visitor.py  parser.py  sema.py  type.py
pimacs/lisp/: README.md  ast.py  ir.py  translator.py
pimacs/sema/: README.md  README.org  __init__.py  ast.py  ast_visitor.py  ast_walker.py  class_sema.py  context.py  file_sema.py  func.py  linker.py  name_binder.py  sema.py  symbol_table.py  type_checker.py  type_infer.py  type_inference.py  utils.py
pimacs/transpiler/: phases.py
pyimacs/: CMakeLists.txt
pyimacs/Dialect/: CMakeLists.txt
pyimacs/Dialect/Lisp/IR/: CMakeLists.txt  Dialect.cc  Dialect.h  LispAttrDefs.td  LispDialect.td  LispOps.td  LispTypes.td  Types.cc  Types.h
pyimacs/test/: basic.mlir  translate.mlir
python/pyimacs/: __init__.py  aot.py  compiler.py  runtime.py
python/pyimacs/_C/: __init__.py  libpyimacs.pyi  libpyimacs2.pyi
python/pyimacs/_C/libpyimacs/pyimacs/: ir.pyi
python/pyimacs/elisp/: __init__.py  buffer.py  core.py  dict.py  list.py  string.py  struct.py  tuple.py
python/pyimacs/lang/: __init__.py  core.py  extension.py  semantic.py
python/src/: pyimacs.cc
python/tests/: test_aot.py  test_compiler.py  test_core.py  test_extension.py  test_mlir.py  test_translate.py  utility.py
python/tests/elisp/: test_buffer.py  test_core.py  test_dict.py  test_string.py  test_struct.py
python/tests/emacs/: test_buffer.py  test_emacs_buffer.py
resource/: pimacs-mode.el
tests/: code_snippets.py  parser_entry.py  test_grammar.py  test_ir_visitor.py  utils.py
tests/ast/: test_ast.py  test_grammar.py  test_parser.py  test_type.py  test_utils.py
tests/codegen/: basic.el  test-basic.pim  test_basic.pim  test_codegen.py
tests/lang/: test_context.py  test_type.py
tests/lisp/: test_translator.py
tests/lit/: basic_test.pis  buffer.pim  buffer.pis  class-template.pis  lit_test.sh  module_test.pim  name-binding.pis  org-element.pis  parser_entry.py
tests/sema/: a-module.pim  code_snippets.py  test-basic.pim  test-class-template.pim  test-imports.pim  test-name-binding.pim  test-org-element.pim  test_ast_visitor.py  test_context.py  test_file_sema.py  test_func.py  test_symbol_table.py  test_type.py  test_type_checker.py  test_type_infer.py  test_type_inference.py  test_with_filecheck.py
